# allium

./: .gitignore  CMakeLists-googletest.txt  CMakeLists.txt  CmakeLists-googletest.txt  CmakeLists.txt  README.md
.github/workflows/: cmake.yml  pre-merge.yml
.github/workflows/test/: action.yml
allium/: CMakeLists.txt
allium-ls/: CMakeLists.txt
allium-ls/include/: JSON.h  LSPServer.h  LSPTypes.h
allium-ls/lib/: JSON.cpp  LSPServer.cpp  LSPTypes.cpp  main.cpp
allium-ls/tests/: languageserver.py
allium-ls/unittests/: TestDecoding.cpp
allium/include/Interpreter/: BuiltinEffects.h  BuiltinPredicates.h  Program.h  WitnessProducer.h
allium/include/LLVMCodeGen/: CGContext.h  CGPred.h  CGType.h  CodeGen.h  LogInstrumentor.h
allium/include/Parser/: AST.h  ASTPrinter.h  Builtins.h  Lexer.h  Parser.h
allium/include/SemAna/: ASTPrinter.h  Builtins.h  GroundAnalysis.h  InhabitableAnalysis.h  PredRecursionAnalysis.h  Predicates.h  StaticError.h  TypeRecursionAnalysis.h  TypedAST.h  VariableAnalysis.h
allium/include/Utils/: Generator.h  Optional.h  TaggedUnion.h  VectorUtils.h
allium/lib/: driver.cpp
allium/lib/Interpreter/: ASTLower.cpp  BuiltinEffects.cpp  BuiltinPredicates.cpp  Program.cpp  WitnessProducer.cpp
allium/lib/LLVMCodeGen/: CGPred.cpp  CGType.cpp  CMakeLists.txt  CodeGen.cpp  CodeGenInternal.h  LogInstrumentor.cpp
allium/lib/LibAllium/: libAllium.c
allium/lib/Parser/: AST.cpp  Builtins.cpp  Lexer.cpp  Parser.cpp
allium/lib/SemAna/: ASTPrinter.cpp  Builtins.cpp  GroundAnalysis.cpp  InhabitableAnalysis.cpp  PredRecursionAnalysis.cpp  Predicates.cpp  StaticError.cpp  TypeRecursionAnalysis.cpp  TypedAST.cpp  VariableAnalysis.cpp
allium/tests/: Backtracking.allium  BooleanSatisfiability.allium  Conjunction.allium  FiniteStateMachine.allium  ForAll.allium  Handler.allium  HelloWorld.allium  IceCreamShop.allium  Int.allium  List.allium  Palindrome.allium  Peano.allium  PushdownAutomaton.allium  String.allium  SyntaxErrors.allium  Trivial.allium  TuringMachine.allium  Types.allium  Void.allium  runner.py
allium/tests/SemAnaGroundAnalysis/: BuiltinAllowable.allium  EffectUnboundIndirect.allium  EffectUnboundRecursive.allium  EffectUnboundTrivial.allium  MixedGroundnessUnification.allium
allium/unittests/: TestASTLower.cpp  TestASTRaise.cpp  TestGenerator.cpp  TestInterpreter.cpp  TestInterpreterBuiltins.cpp  TestOptional.cpp  TestParse.cpp  TestSema.cpp
docs/: ABI.md  CLI.md  Debugging.md  Effects.md  ImplicitTypeConversions.md  Language.md  ParametricPolymorphism.md  README.md
include/: AST.h  ASTPrinter.h  lexer.h  parser.h
include/Interpreter/: ASTLower.h  BuiltinEffects.h  Program.h  WitnessProducer.h  program.h
include/LSPServer/: LSPServer.h  LSPTypes.h
include/Parser/: AST.h  ASTPrinter.h  Lexer.h  Parser.h  lexer.h  parser.h
include/SemAna/: ASTPrinter.h  Predicates.h  StaticError.h  TypedAST.h  VariableAnalysis.h
include/Utils/: Optional.h  ParserValues.h  TaggedUnion.h  Unit.h  VectorUtils.h
include/values/: Generator.h  Optional.h  ParserValues.h  TaggedUnion.h  VectorUtils.h
lib/: driver.cpp
lib/Interpreter/: ASTLower.cpp  BuiltinEffects.cpp  Program.cpp  WitnessProducer.cpp  program.cpp
lib/LSPServer/: JSON.cpp  LSPServer.cpp  LSPTypes.cpp  main.cpp
lib/Parser/: AST.cpp  Builtins.cpp  Lexer.cpp  Parser.cpp  lexer.cpp  parser.cpp
lib/SemAna/: ASTPrinter.cpp  Builtins.cpp  Predicates.cpp  StaticError.cpp  TypedAST.cpp  VariableAnalysis.cpp
lib/parse/: AST.cpp  lexer.cpp  parser.cpp
tests/: Backtracking.allium  Conjunction.allium  FiniteStateMachine.allium  HelloWorld.allium  Int.allium  List.allium  Palindrome.allium  Peano.allium  PushdownAutomaton.allium  String.allium  TuringMachine.allium  Variables.allium  languageserver.py  peano.allium
unittests/: TestASTLower.cpp  TestASTRaise.cpp  TestGenerator.cpp  TestInterpreter.cpp  TestLanguageServerDecoding.cpp  TestOptional.cpp  TestParse.cpp  TestSema.cpp  TestTaggedUnion.cpp
